manifest/management/testapp.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-admin-app
  namespace: admin-area
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-admin-app
  template:
    metadata:
      labels:
        app: sample-admin-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: sample-admin-app
  namespace: admin-area
spec:
  type: ClusterIP
  selector:
    app: sample-admin-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
