manifest/management/k8s-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: lilamaris-issuer
    ingress.cilium.io/tls-passthrough: "enabled"
spec:
  tls:
  - hosts:
    - adm.lilamaris.kr
    secretName: k8s-dashboard-cert
  ingressClassName: cilium
  rules:
  - host: adm.lilamaris.kr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
